// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translateHeaderObject should translate to IHttpHeaderParam 1`] = `
Object {
  "allowEmptyValue": true,
  "allowReserved": true,
  "content": Object {},
  "deprecated": true,
  "description": "descr",
  "explode": true,
  "name": "header-name",
  "required": true,
  "schema": Object {},
  "style": "simple",
}
`;

exports[`translateMediaTypeObject given complex nested media type object should translate correctly 1`] = `
Object {
  "encodings": Array [
    Object {
      "contentType": "text/plain",
      "headers": Array [
        Object {
          "content": Object {
            "mediaType": Object {
              "encodings": Array [],
              "examples": Array [],
              "mediaType": "mediaType",
              "schema": undefined,
            },
          },
          "description": "descr",
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "summary": "multi example",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {},
}
`;

exports[`translateMediaTypeObject given encoding with incorrect style should throw an error 1`] = `"Encoding property style: 'xyz' is incorrect, must be one of: form,spaceDelimited,pipeDelimited,deepObject"`;

exports[`translateMediaTypeObject given encodings should translate each encoding to array item 1`] = `
Object {
  "encodings": Array [
    Object {
      "allowReserved": true,
      "contentType": "text/plain",
      "explode": true,
      "headers": Array [
        Object {
          "content": Object {},
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
    Object {
      "allowReserved": true,
      "contentType": "text/plain",
      "explode": true,
      "headers": Array [
        Object {
          "content": Object {},
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc2",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "summary": "multi example",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {},
}
`;

exports[`translateMediaTypeObject given multiple examples should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "summary": "multi example",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {},
}
`;

exports[`translateMediaTypeObject given single example should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "summary": "single example",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {},
}
`;
